Responsive, vars, conditionals, functions, loops

--- a/CSS/ResponsiveDesign/index.html
+++ b/CSS/ResponsiveDesign/index.html
@@ -67,5 +67,7 @@
             Calle de las zapas 25, 28040
         </address>
     </footer>
+
+    <blockquote>Hola que tal?</blockquote>
 </body>
 </html>
